# sudoku.ts

./: README.md  comprehensive-hint.test.ts  difficulty-system.test.ts  hint-detection.test.ts  index.ts  integration.test.ts  performance.test.ts  sudoku.js  sudoku.test.js  sudoku.test.ts  sudoku.ts  types.ts
core/: benchmark.ts  benchmark_deterministic.ts  benchmark_fast.ts  core.test.ts  fast_generator.ts  generator.test.ts  generator.ts  solver.ts  utils.ts
fast-sudoku/: Cargo.toml  adapter.ts
fast-sudoku/src/: difficulty.rs  generator.rs  grid.rs  lib.rs  solver.rs  techniques.rs  utils.rs
hints/: chute-remote-pairs.test.ts  detector.ts  difficulty.test.ts  difficulty.ts  hints.test.ts  index.ts  simple-coloring.test.ts  types.ts  x-wing.test.ts  y-wing.test.ts  y-wing.ts
norvig/: sudoku-norvig.js
